testsuite/tests/warnings/should_fail/SpecEMultipleTys.stderr
SpecEMultipleTys.hs:10:22: error: [GHC-62037]
    SPECIALISE expression doesn't support multiple type ascriptions
    Suggested fix:
      Split the SPECIALISE pragma into multiple pragmas, one for each type signature

